build-output.txt

> blw-canada-os@0.1.0 build
> vite build

[31mfailed to load config from C:\Users\moser\Downloads\clickup\vite.config.js[39m
[31merror during build:
file:///C:/Users/moser/Downloads/clickup/vite.config.js.timestamp-1781795732898-35eb2a72598c7.mjs:6
import { visualizer } from "file:///C:/Users/moser/Downloads/clickup/node_modules/vite-bundle-visualizer/index.js";
         ^^^^^^^^^^
SyntaxError: The requested module 'file:///C:/Users/moser/Downloads/clickup/node_modules/vite-bundle-visualizer/index.js' does not provide an export named 'visualizer'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:180:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:263:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:547:26)
    at async loadConfigFromBundledFile (file:///C:/Users/moser/Downloads/clickup/node_modules/vite/dist/node/chunks/dep-BK3b2jBa.js:66975:15)
    at async loadConfigFromFile (file:///C:/Users/moser/Downloads/clickup/node_modules/vite/dist/node/chunks/dep-BK3b2jBa.js:66816:24)
    at async resolveConfig (file:///C:/Users/moser/Downloads/clickup/node_modules/vite/dist/node/chunks/dep-BK3b2jBa.js:66416:24)
    at async build (file:///C:/Users/moser/Downloads/clickup/node_modules/vite/dist/node/chunks/dep-BK3b2jBa.js:65503:18)
    at async CAC.<anonymous> (file:///C:/Users/moser/Downloads/clickup/node_modules/vite/dist/node/cli.js:829:5)[39m
